# HeuristicHittingSetSolver

./: .gitignore  CMakeLists.txt  LPLocalSearch.cpp  LPLocalSearch.hpp  LPSolver.hpp  README.md  RandomLocalSearch.cpp  SmallExample.hgr  adaptiveGreedy.cpp  adaptiveGreedy.hpp  adaptiveGreedyState.cpp  adaptiveGreedyState.hpp  adaptiveGreedyTabuLocalSearch.cpp  adaptiveGreedyTabuLocalSearch.hpp  algorithmState.hpp  aliases.hpp  branchAndReduceState.cpp  branchAndReduceState.hpp  bremen_subgraph_20.hgr  bremen_subgraph_20.sol  bremen_subgraph_250.sol  bremen_subgraph_300.sol  bremen_subgraph_50.sol  flatNeighborhoodStrategy.hpp  greedy.cpp  greedy.hpp  greedyState.cpp  greedyState.hpp  hypergraph.hpp  kernelization.cpp  kernelization.hpp  localSearch.cpp  localSearch.hpp  localSearchStrategy.hpp  logger.hpp  main.cpp  neighborhoodStrategy.hpp  oscillatingNeighborhoodStrategy.hpp  pq.hpp  randomLPLocalSearch.cpp  (+13 more)
algorithms/: greedy.cpp  greedy.h  greedy.hpp
execution_stats/: generated_nm5degm15__runtime.csv  generated_nm5degm250__resultsquality.csv  generated_nm5degm250__runtime.csv  hs_exact__resultsquality.csv  hs_exact__runtime.csv  hse__resultsquality.csv  hse__runtime.csv  pace23__resultsquality.csv  pace23__runtime.csv
include/: LPSolver.hpp  hypergraph.hpp  kernelization.hpp  solution.hpp
include/peripheral/: utils.hpp  (+2 more)
src/: LPSolver.cpp  kernelization.cpp  main.cpp  sigtermHandler.cpp  utils.cpp
z_execution_stats/: hse__resultsquality.csv  hse__runtime.csv  hsh__resultsquality.csv  hsh__runtime.csv  n1024000_m1024000__adaptiveGreedy_explore__results_abs.csv  (+243 more)
(+36 files in other folders)
